[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.2"
pest_derive = "2.7.2"
tokio = "1.31.0"
hostname = "^0.3"
rand = "0.8.5"
random-string = "1.0.0"
chrono = "0.4.26"

[[example]]
name = "example"
