[package]
name = "hermes_ru"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
authors = ["Liudao <jimmyseraph@testops.vip>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jimmyseraph/hermes"
homepage = "https://github.com/jimmyseraph/hermes"
description = """
A very convenient string parsing crate that can parse function and variable references in strings into corresponding values.
"""
categories = ["parser-implementations"]
keywords = ["parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.2"
pest_derive = "2.7.2"
tokio = "1.31.0"
hostname = "^0.3"
rand = "0.8.5"
random-string = "1.0.0"
chrono = "0.4.26"

[[example]]
name = "example"
